# BBB-PPP

./: .gitignore  Case_RayleighPlessetBubble.cpp  README.md
Bubble_Dynamics/: .gitignore  CMakeLists.txt  install
Bubble_Dynamics/config/: inputs.json  inputs_Rayleigh_Plesset_unbounded_epsilon100.json  inputs_Rayleigh_Plesset_unbounded_epsilon1000.json  inputs_Rayleigh_free_surface_gamma056.json  inputs_Rayleigh_free_surface_gamma075.json  inputs_Rayleigh_rigid_boundary.json  inputs_Rayleigh_unbounded.json
Bubble_Dynamics/config_examples/: inputs_Rayleigh_free_surface_gamma075.json  inputs_Rayleigh_rigid_boundary.json
Bubble_Dynamics/doc/: Doxyfile  README_BUBBLE_DYNAMICS.md
Bubble_Dynamics/include/core/: BIM_solver.hpp  BoundaryData.hpp  BubbleData.hpp  Case_FlatBoundary.hpp  Case_RayleighBubble.hpp  Case_RayleighPlessetBubble.hpp  Inputs.hpp  cubic_spline.hpp  init_R0.hpp  integrands_BIM.hpp  integrands_volume.hpp  time_stepper.hpp
Bubble_Dynamics/include/stream/: ConfigFileParser.hpp
Bubble_Dynamics/post_processing/: quick_output_display.py  video_generator.py
Bubble_Dynamics/solver/: main.cpp
Bubble_Dynamics/src/core/: BoundaryData.cpp  BubbleData.cpp  Case_FlatBoundary.cpp  Case_RayleighBubble.cpp  Case_RayleighPlessetBubble.cpp  cubic_spline.cpp
Bubble_Dynamics/src/stream/: ConfigFileParser.cpp
Flow_Field_Quantities/: .gitignore  CMakeLists.txt
Flow_Field_Quantities/CPP_Code/: cubic_spline.cpp  cubic_spline.hpp  integrands_BIM.hpp  velocity_potential.cpp
Flow_Field_Quantities/Python_Code/: classify_domain.py  create_domain.py  flow_field.py  inputs.py
Flow_Field_Quantities/input_files_examples/: unbounded_Rayleigh.txt
Flow_Field_Quantities/post-processing/: flow_field_visualization.py
Flow_Field_Quantities/solver_codes/python/: flow_field.py  inputs.py  main.py
SIMS/: input.json  output.ipynb  runscript
